jpegdec: remove framerate

The jpeg decoder doesn't need/care about the framerate to so it should
not be in the caps.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676302